# api/routes/api.php
@@ -11,6 +11,7 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('v1')->group(function () {
     Route::get('movies', [MovieController::class, 'index']);
     Route::get('movies/{slug}', [MovieController::class, 'show']);
+    Route::get('people', [PersonController::class, 'index']);
     Route::get('people/{slug}', [PersonController::class, 'show']);
     Route::post('generate', [GenerateController::class, 'generate']);
     Route::get('jobs/{id}', [JobsController::class, 'show']);
